Adjusted spacing and 'fixed' rain decimal places

--- a/frontend/src/components/overviewDisplay/OverviewDisplay.scss
+++ b/frontend/src/components/overviewDisplay/OverviewDisplay.scss
@@ -5,7 +5,7 @@
         height: 1px;
         border: 0;
         border-top: 1px solid #ccc;
-        margin: 1em 0;
+        margin: 10px 0 10px 0;
         padding: 0;
         width: 100%;
     }
@@ -16,7 +16,7 @@
         align-items: center;
         margin-top: 20px;
         line-height: 0.9em;
-        font-size: 34pt;
+        font-size: 50px;
         font-weight: 600;
 
         .current-time--last-updated {
@@ -44,8 +44,8 @@
             .sub-item {
                 font-weight: 600;
                 font-size: 90px;
-                padding-top: 50px;
-                margin-bottom: 50px;
+                padding-top: 35px;
+                margin-bottom: 30px;
                 line-height: 2rem;
             }
         }
